--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -154,6 +154,9 @@ p.sub-title-2 .special{
 	position: relative;
 	z-index: 1;
 }
+.content-jadwal .table-2{
+	display: none;
+}
 .content-vektor-3 img{
 	width: 70%;
 	position: absolute;
