--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -114,14 +114,14 @@ p.sub-title-2 .special{
 	width: 28%;
 	position: absolute;
 	top:	-45px;
-	left: 200px;
+	right: 200px;
 }
 .content-vektor-2::after{
 	content: "";
 	position: absolute;
 	/*right: 300px;*/
 	top:-35px;
-	left: 200px;
+	right: 200px;
 	width: 28%;
 	height: 110%;
 	display: block;
